# cipherpunk-rs

./: .env.example  .gitignore  Cargo.toml  README.md  SECURITY.md  docker-compose.yml  implementation-plan-v2.md  start-web-http.sh
.githooks/: pre-push
crates/apps/cli/: Cargo.toml
crates/apps/cli/src/: lib.rs
crates/apps/cli/tests/: eval_cli_tests.rs  pipeline_smoke_tests.rs
crates/apps/orchestrator/: Cargo.toml
crates/apps/orchestrator/src/: events.rs  jobs.rs  lib.rs  runtime.rs  tool_actions.rs
crates/apps/orchestrator/tests/: end_to_end_v3_tests.rs  job_runtime_tests.rs  orchestrator_tests.rs  tool_actions_tests.rs
crates/apps/tauri-ui/: Cargo.toml
crates/apps/tauri-ui/src/: ipc.rs  lib.rs
crates/apps/tauri-ui/tests/: ui_ipc_tests.rs
crates/apps/web-server/: Cargo.toml
crates/apps/web-server/src/: lib.rs  main.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/cli/tests/: pipeline_smoke_tests.rs
crates/data/evidence/: Cargo.toml
crates/data/evidence/tests/: evidence_store_tests.rs
crates/data/project-ir/: Cargo.toml
crates/data/project-ir/src/: circom.rs  graph.rs  lib.rs  rust.rs  semantic.rs
crates/data/project-ir/tests/: circom_ir_tests.rs  dataflow_redaction_tests.rs  rust_graph_tests.rs  workspace_loader_tests.rs
crates/data/session-store/: Cargo.toml
crates/data/session-store/src/: lib.rs  schema.rs  search.rs  sqlite.rs
crates/data/session-store/tests/: session_store_tests.rs
crates/engine-crypto/: Cargo.toml
crates/engine-crypto/src/: intake_bridge.rs  lib.rs  supply_chain.rs
crates/engine-crypto/src/kani/: scaffolder.rs
crates/engine-crypto/src/rules/: mod.rs
crates/engine-crypto/src/semantic/: mod.rs  ra_client.rs
crates/engine-crypto/src/tool_actions/: fuzz.rs  mod.rs
crates/engine-crypto/src/zk/: phase3_pipeline.rs
crates/engine-crypto/src/zk/halo2/: cdg.rs  smt_checker.rs
crates/engine-crypto/tests/: circom_signal_graph_tests.rs  halo2_smt_checker_tests.rs  intake_bridge_tests.rs  kani_scaffolder_tests.rs  phase3_pipeline_tests.rs  rule_evaluator_tests.rs  semantic_index_tests.rs  supply_chain_tests.rs  z3_checker_tests.rs
crates/engine-crypto/tests/fixtures/rust-crypto/: crypto001_nonce_reuse.rs  (+4 more)
crates/engine-distributed/: Cargo.toml
crates/engine-distributed/scenarios/: byzantine-double-vote.yaml
crates/engine-distributed/src/: feasibility.rs  lib.rs  trace.rs  util.rs
crates/engine-distributed/src/chaos/: mod.rs
crates/engine-distributed/src/economic/: mod.rs
crates/engine-distributed/src/harness/: builder.rs
crates/engine-distributed/src/tool_actions/: chaos.rs  madsim.rs
crates/engine-distributed/tests/: economic_checker_tests.rs  feasibility_tests.rs  phase4_integration_tests.rs
crates/engines/crypto/: Cargo.toml
crates/engines/crypto/src/: intake_bridge.rs  lib.rs
crates/engines/crypto/tests/: halo2_cdg_tests.rs  intake_bridge_tests.rs  kani_scaffolder_tests.rs  phase3_pipeline_tests.rs  rule_evaluator_tests.rs  semantic_index_tests.rs  zkvm_diff_tester_tests.rs
crates/engines/lean/: Cargo.toml
crates/engines/lean/src/: lib.rs  scaffold.rs
crates/engines/lean/tests/: client_tests.rs
crates/llm/: Cargo.toml
crates/llm/src/: contracts.rs  copilot.rs  evidence_gate.rs  lib.rs  provider.rs
crates/llm/tests/: copilot_tests.rs  direct_complete_lint_tests.rs  evidence_gate_tests.rs  provider_tests.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: events.rs  jobs.rs  lib.rs  tool_actions.rs
crates/orchestrator/tests/: orchestrator_lean_tests.rs  orchestrator_tests.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: lib.rs  redaction.rs  remote.rs
crates/sandbox/tests/: redaction_tests.rs  remote_worker_tests.rs
crates/services/intake/: Cargo.toml
crates/services/intake/src/: config.rs  detection.rs  lib.rs  optional_inputs.rs  workspace.rs
crates/services/intake/tests/: intake_tests.rs
crates/services/knowledge/: Cargo.toml
crates/services/knowledge/src/: lib.rs  loader.rs  long_term.rs  models.rs  store.rs  working_memory.rs
crates/services/knowledge/tests/: embedder_tests.rs  memory_block_cross_language_tests.rs  memory_block_tests.rs  memory_tiers_tests.rs  playbook_tests.rs  schema_snapshot_tests.rs  schema_tests.rs
crates/services/llm-eval/: Cargo.toml
crates/services/llm-eval/fixtures/: prose_rendering.yaml  scaffolding.yaml  search_hints.yaml
crates/services/llm-eval/src/: fixture.rs  lib.rs  reporter.rs  runner.rs
crates/services/llm-eval/tests/: fixture_tests.rs  reporter_tests.rs  runner_tests.rs
crates/services/report/: Cargo.toml
crates/services/report/src/: executive.rs  generator.rs  regression.rs  technical.rs
crates/services/report/templates/: candidates.typ  executive.typ
crates/services/report/tests/: report_generator_tests.rs  technical_report_tests.rs  v3_report_tests.rs
crates/services/research/: Cargo.toml
crates/services/research/src/: allowlist.rs  cache.rs  lib.rs  service.rs
crates/services/research/tests/: research_service_tests.rs
crates/services/session-manager/: Cargo.toml
crates/services/session-manager/src/: explorer_graph.rs  explorer_graph_tests.rs  lib.rs  state.rs  workflow.rs
crates/tauri-ui/: Cargo.toml
crates/tauri-ui/src/: ipc.rs  lib.rs
crates/tauri-ui/tests/: ui_ipc_tests.rs
tools/pdf_foundry/: README.md  pyproject.toml
tools/pdf_foundry/models/: README.md
tools/pdf_foundry/pdf_foundry/: __init__.py  __main__.py  config.py
tools/pdf_foundry/pdf_foundry/bundling/: __init__.py  bundle_writer.py
tools/pdf_foundry/pdf_foundry/embedding/: __init__.py  api_embedder.py  onnx_embedder.py
tools/pdf_foundry/pdf_foundry/extraction/: __init__.py  extractor.py  prompts.py
tools/pdf_foundry/pdf_foundry/parsing/: __init__.py  pdf_parser.py
tools/pdf_foundry/pdf_foundry/schema/: __init__.py  signature.py
tools/pdf_foundry/tests/: __init__.py  test_bundle_writer.py  test_config.py  test_embedder.py  test_extractor.py  test_parser.py
ui/src-tauri/: Cargo.toml  LINUX_BOOTSTRAP.md  tauri.conf.json
ui/src-tauri/src/: commands.rs  lib.rs  main.rs
(+305 files in other folders)
