[workspace]
members = [
    "crates/core",
    "crates/engines/crypto",
    "crates/engines/distributed",
    "crates/engines/lean",
    "crates/data/evidence",
    "crates/data/findings",
    "crates/data/project-ir",
    "crates/data/session-store",
    "crates/services/intake",
    "crates/services/knowledge",
    "crates/services/llm",
    "crates/services/report",
    "crates/services/sandbox",
    "crates/workers/protocol",
    "crates/workers/runner",
    "crates/apps/cli",
    "crates/apps/orchestrator",
    "crates/apps/tauri-ui",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
