[package]
name = "audit-agent-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "audit-agent"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
audit-agent-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
engine-crypto = { path = "../engine-crypto" }
engine-distributed = { path = "../engine-distributed" }
intake = { path = "../intake" }
llm = { path = "../llm" }
orchestrator = { path = "../orchestrator" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
