[package]
name = "engine-crypto"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
audit-agent-core = { path = "../core" }
evidence = { path = "../evidence" }
hex = "0.4"
intake = { path = "../intake" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
sha2 = "0.10"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
