[package]
name = "engine-distributed"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
audit-agent-core = { path = "../core" }
engine-crypto = { path = "../engine-crypto" }
intake = { path = "../intake" }
llm = { path = "../llm" }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
walkdir = "2"

[dev-dependencies]
async-trait = "0.1"
intake = { path = "../intake" }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
