[package]
name = "llm"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
regex = "1"
sandbox = { path = "../sandbox" }
serde = { version = "1", features = ["derive"] }
tempfile = "3"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
walkdir = "2"
