[package]
name = "llm"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
audit-agent-core = { path = "../core" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
regex = "1"
sandbox = { path = "../sandbox" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tracing = "0.1"

[dev-dependencies]
mockito = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
walkdir = "2"
