[package]
name = "orchestrator"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
audit-agent-core = { path = "../core" }
chrono = "0.4"
findings = { path = "../findings" }
intake = { path = "../intake" }
llm = { path = "../llm" }
report = { path = "../report" }
serde_json = "1"

[dev-dependencies]
async-trait = "0.1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
