[package]
name = "orchestrator"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
audit-agent-core = { path = "../core" }
chrono = "0.4"
engine-crypto = { path = "../engine-crypto" }
engine-distributed = { path = "../engine-distributed" }
findings = { path = "../findings" }
intake = { path = "../intake" }
llm = { path = "../llm" }
report = { path = "../report" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
session-store = { path = "../session-store" }

[dev-dependencies]
sandbox = { path = "../sandbox" }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
