[package]
name = "sandbox"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
audit-agent-core = { path = "../core" }
bollard = "0.17"
futures-util = "0.3"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
worker-protocol = { path = "../worker-protocol" }
