[package]
name = "tauri-ui"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
audit-agent-core = { path = "../core" }
chrono = { version = "0.4", features = ["clock"] }
intake = { path = "../intake" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
zip = "2"

[dev-dependencies]
tempfile = "3"
