[package]
name = "audit-agent-ui-tauri"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "audit_agent_ui_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "audit-agent-ui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["sync"] }
tauri-ui = { path = "../../crates/apps/tauri-ui", package = "tauri-ui" }
audit-agent-core = { path = "../../crates/core" }

[workspace]
members = []
