[package]
name = "audit-agent-web"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["ws"] }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
session-manager = { path = "../../services/session-manager" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
