[package]
name = "evidence"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
audit-agent-core = { path = "../../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
