[package]
name = "engine-crypto"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
audit-agent-core = { path = "../../core" }
evidence = { path = "../../data/evidence" }
hex = "0.4"
intake = { path = "../../services/intake" }
llm = { path = "../../services/llm" }
num-bigint = "0.4"
rand = "0.8"
regex = "1"
sandbox = { path = "../../services/sandbox" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3"
tokio = { version = "1", features = ["rt", "time"] }
tracing = "0.1"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
walkdir = "2"

[dev-dependencies]
smt2parser = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
