[package]
name = "engine-lean"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
audit-agent-core = { path = "../../core" }
chrono = "0.4"
llm = { path = "../../services/llm" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
async-trait = "0.1"
mockito = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
