[package]
name = "llm-eval"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
llm = { path = "../llm" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
async-trait = "0.1"
