[package]
name = "report"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
audit-agent-core = { path = "../../core" }
findings = { path = "../../data/findings" }
llm = { path = "../llm" }
printpdf = "0.7"
sandbox = { path = "../sandbox" }
serde_json = "1"

[dev-dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
lopdf = "0.34"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
