[package]
name = "research"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
urlencoding = "2"

[dev-dependencies]
mockito = "1"
tokio = { version = "1", features = ["macros", "rt", "time"] }
