[package]
name = "session-manager"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
audit-agent-core = { path = "../../core" }
chrono = { version = "0.4", features = ["clock"] }
engine-crypto = { path = "../../engines/crypto" }
intake = { path = "../intake" }
knowledge = { path = "../knowledge", features = ["memory-block"] }
llm = { path = "../llm" }
orchestrator = { path = "../../apps/orchestrator" }
project-ir = { path = "../../data/project-ir" }
research = { path = "../research" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
session-store = { path = "../../data/session-store" }
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
zip = "2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
